# Auth_sprint_1

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  accomulate.py  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml
app/: Dockerfile  entrypoint.sh  gunicorn.conf.py
app/movies/: models.py  views.py
app/movies/api/v1/: views.py
auth_service/: Dockerfile  alembic.ini  entrypoint.sh  gunicorn_conf.py  migrations.py
auth_service/src/: main.py
auth_service/src/api/: __init__.py  healthcheck.py
auth_service/src/api/v1/: __init__.py  auth.py  healthcheck.py  role.py  roles.py  users.py
auth_service/src/core/: __init__.py  config.py  default_user_roles.py  exceptions.py  logger.py
auth_service/src/core/exceptions/: __init__.py  exceptions.py  redis.py
auth_service/src/core/keys/: private.pem  public.pem
auth_service/src/db/: __init__.py  postgres.py  redis.py
auth_service/src/interfaces/repositories/: __init__.py  base.py  login_history.py  postgres.py  redis_db.py  role.py  role_permission.py  token.py  user.py  user_role.py
auth_service/src/interfaces/services/: __init__.py  authjwt.py  role_management.py  user_authentication.py  user_management.py
auth_service/src/migrations/: env.py
auth_service/src/migrations/versions/: 2024_06_04_0443-72a7fb9d3426_add_user_and_role.py  2024_06_05_2348-182490d14cc0_add_user_role_login_history.py  2024_06_06_1041-bb34c3ada8fe_add_id_into_user_role_update_ondelete_.py  2024_06_06_2204-ae951db8e85e_add_user_user_role_role_login_history.py  2024_06_06_2244-7d8f06ab0df0_add_user_user_role_role_login_history.py  2024_06_13_2320-4a6b982b5d53_initial_migration.py  2024_06_13_2353-d21fb1cebd5a_initial_add_default_roles.py  2024_06_14_0047-8f2d0da2262e_add_superuser.py  2024_06_14_0225-e4f8646ab816_add_permissions.py  2024_06_14_0249-75cc9bed03c0_add_role_permissions.py
auth_service/src/models/: __init__.py  base.py  entity.py  login_history.py  mixins.py  permission.py  role.py  role_permission.py  user.py  user_role.py
auth_service/src/repositories/: __init__.py  login_history.py  postgres.py  redis_db.py  role.py  role_permission.py  token.py  user.py  user_role.py
auth_service/src/schemas/: mixins.py  pagination.py
auth_service/src/schemas/request/: __init__.py  auth.py  login_history.py  role.py  role_permissions.py  token.py  user.py  user_role.py
auth_service/src/schemas/response/: __init__.py  login_history.py  role.py  token.py  user.py
auth_service/src/services/: __init__.py
auth_service/src/services/role_management/: __init__.py  role_assignment.py  role_creation.py  (+4 more)
auth_service/src/utils/: __init__.py  combinations.py  date_format.py  db_operations.py  helpers.py  lifespan.py  password.py  permission_middleware.py  static_uuid.py  token_in_denylist.py
db/elasticsearch/indices/: genres.json  movies.json  people.json
db/initdb/: movies_database_dump.sql
db/postgres/: init-db.sh
db/postgres/initdb/: init.sql  movies_database_dump.sql
db/postgres/populate_db/: Dockerfile  populate_db.py
db/redis/: Dockerfile  entrypoint.sh
docker/: create_indices.sh  elastic-dump-loader.Dockerfile  elastic-index-creator.Dockerfile  elasticsearch_operations.sh  python-base.Dockerfile  python-venv-builder.Dockerfile  setup_user.sh
elasticsearch/: Dockerfile  elasticsearch.yml
etl/src/: backoff.py  connectors.py  etl_process.py  extractor.py  loader.py  logging_config.py  models.py  settings.py  state_manager.py
etl/src/sql/: extract.sql
etl_service/: Dockerfile  main.py
etl_service/data_pipeline/: etl_process.py  etl_processor.py  loader.py  transformer.py
etl_service/data_pipeline/extractors/: base_extractor.py  filmwork_extractor.py  genre_extractor.py  person_extractor.py
etl_service/data_pipeline/interfaces/: data_process_interface.py
etl_service/data_pipeline/sql/: combine_data_changed_rows.sql  enrich_changed_rows.sql  test.py
etl_service/datastore_adapters/: base_adapter.py  elasticsearch_adapter.py  postgres_adapter.py  redis_adapter.py
etl_service/models/: genre.py  mixins.py  movie.py  movies.py  person.py  state.py
etl_service/sql/: combine_data_changed_rows.sql  enrich_changed_rows.sql  fetch_changed_rows.sql  genres.sql  movies.sql  people.sql
etl_service/utility/: backoff.py  exceptions.py  logger.py  settings.py  state_manager.py  support_functions.py  utils.py
fastapi_service/: Dockerfile
fastapi_service/src/: main.py
fastapi_service/src/api/: __init__.py  healthcheck.py
fastapi_service/src/core/: config.py  exceptions.py  logger.py  utils.py
fastapi_service/src/db/: elasticsearch.py  redis.py
fastapi_service/src/models/: film.py  genre.py  mixins.py  person.py
fastapi_service/src/services/: elasticsearch.py  exceptions.py  film.py  genre.py  person.py  redis_cache.py
nginx/: Dockerfile  nginx.conf
nginx/configs/: site.conf
redis/: Dockerfile
tests/: test_data_integrity.py
tests/auth_service/: Dockerfile  conftest.py  entrypoint.sh  settings.py
tests/auth_service/src/: test_role.py  test_user.py
tests/auth_service/testdata/: person.py
tests/auth_service/utils/: helpers.py  wait_for_app.py  wait_for_redis.py
tests/fastapi_service/: Dockerfile  conftest.py  entrypoint.sh  settings.py
tests/fastapi_service/src/: test_film.py  test_genre.py  test_person.py
tests/fastapi_service/testdata/: film.py  genre.py
tests/fastapi_service/utils/: base_entity.py  wait_for_app.py  wait_for_es.py  wait_for_redis.py
tests/functional/: Dockerfile  conftest.py  entrypoint.sh  settings.py
tests/functional/src/: test_film.py  test_genre.py  test_person.py
tests/functional/testdata/: es_mapping.py  film.py  genre.py  person.py
tests/functional/utils/: base_entity.py  helpers.py  wait_for_app.py  wait_for_es.py  wait_for_redis.py
web_service/: Dockerfile  entrypoint.sh  gunicorn_conf.py
web_service/config/: settings.py  urls.py
web_service/config/components/: application_definition.py  locale_settings.py  other_settings.py  secure_settings.py
web_service/movies/: admin.py  models.py  views.py
(+55 files in other folders)
