[tool.poetry]
name = "auth-sprint-1"
version = "0.1.0"
description = "..."
authors = ["Aleksey Gredyaev <aleksey.gredyaev@gmail.com>"]
readme = "README.md"

# Dependencies
[tool.poetry.dependencies]
python = ">=3.9, <4.0"


[tool.poetry.group.backend.dependencies]
psycopg2-binary = "^2.9"
django = "^4.2.5"
python-dotenv = "^1.0.1"
django-split-settings = "^1.2.0"
gunicorn = "^21.2.0"
django-cors-headers = "^4.3.1"
django-extensions = "^3.2.3"

[tool.poetry.group.etl.dependencies]
elasticsearch = "^8.12.1"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
pydantic = "^2.7.0"
redis = "^5.0.3"

[tool.poetry.group.fastapi.dependencies]
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
redis = "^5.0.3"
gunicorn = "^21.2.0"
elasticsearch = { version = "^8.12.1", extras = ["async"] }
orjson = "^3.9.12"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
uvloop = {platform = "linux", markers = "sys_platform != 'win32' or platform_python_implementation == 'CPython'", version = "^0.19.0"}

[tool.poetry.group.dev.dependencies]
pytest-cov = "4.0.0"
Faker = "25.2.0"
pre-commit = "3.6.0"
click = "^8.1.7"
pylint-django = "^2.5.5"
requests = "^2.31.0"
jsonschema = "^4.21.1"
ruff = "^0.4.1"
pytest-mock = "^3.14.0"
mypy = "^1.8.0"
httpx = "^0.27.0"
asyncpg = "^0.29.0"
redis = "^5.0.4"
pytest = "^7.4.4"
pytest-asyncio = "0.21.1"
pyotp = "^2.9.0"
python-multipart = "^0.0.9"
tqdm = "^4.66.4"

[tool.poetry.group.fakedata.dependencies]
faker = "25.2.0"
asyncpg = "0.29.0"
aiofiles = "23.2.1"
python-dotenv = "1.0.1"

[tool.poetry.group.functionaltest.dependencies]
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
redis = "^5.0.4"
elasticsearch = { version = "^8.12.1", extras = ["async"] }
pytest = "^7.4.4"
pytest-asyncio = "0.21.1"
Faker = "25.2.0"
backoff = "^2.2.1"


[tool.poetry.group.auth.dependencies]
redis = "^5.0.4"
orjson = "^3.10.3"
pydantic = "^2.7.2"
pydantic-settings = "^2.2.1"
async-fastapi-jwt-auth = "^0.6.5"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
uvloop = {platform = "linux", markers = "sys_platform != 'win32' or platform_python_implementation == 'CPython'", version = "^0.19.0"}
gunicorn = "^21.2.0"
uvicorn = "^0.26.0"
alembic = "^1.13.1"
werkzeug = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",  # pycodestyle
    "ERA",  # eradicate
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "Q",  # flake8-quotes
    "S",  # flake8-bandit
    "T10",  # flake8-debugger
    "W",  # pycodestyle
]
extend-ignore = ["B904", "S311", "S104"]

[tool.mypy]
mypy_path = ["tests", "auth_service/src"]
plugins = [
  "pydantic.mypy"
]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
no_implicit_optional = true
explicit_package_bases = true


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
addopts =  "-vv -p no:cacheprovider"
testpaths = ["tests", "functional"]
pythonpath = ["."]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
